2009-09-18  Glenn Morris  <rgm@gnu.org>

	* net/eudc-bob.el (eudc-bob-pipe-object-to-external-program):
	* net/eudc.el (eudc-expand-inline):
	* net/newst-backend.el (newsticker--cache-read-feed): Fix typos in
	condition-case handlers.

2009-09-18  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-frame-address): New variable.
	(gdb-var-list): Add an element for has_more field.
	(gdb-non-stop-handler): Enable pretty printing for STL containers.
	(gdb-var-create-handler, gdb-var-list-children-handler-1)
	(gdb-var-update-handler-1): Parse output of dynamic variable
	objects (STL containers).
	(gdb-var-delete-1): Pass var1 as an explicit second argument.
	(gdb-get-field): Delete alias.  Use bindat-get-field directly.

	* progmodes/gud.el (gud-speedbar-item-info): Adjust for change to
	gdb-var-list.
	(gud-speedbar-buttons): Make node expandable if expression "has more"
	children.

2009-09-17  Juanma Barranquero  <lekktu@gmail.com>

	* startup.el (emacs-quick-startup): Remove variable and all uses.
	(command-line): Set `inhibit-x-resources' instead.
	(command-line-1): Use `inhibit-x-resources' instead.

2009-09-17  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el: Fix last change to avoid using the `unless' macro,
	which breaks bootstrapping.

2009-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (push, pop, dolist, dotimes, declare): Don't overwrite CL's
	extended definitions, in case we reload subr.el after having
	loaded CL.
	(eval-next-after-load): Mark as obsolete.

2009-09-17  Juri Linkov  <juri@jurta.org>

	* menu-bar.el (menu-bar-search-menu, menu-bar-edit-menu)
	(menu-bar-options-menu, menu-bar-showhide-fringe-menu)
	(menu-bar-showhide-menu, menu-bar-tools-menu)
	(menu-bar-describe-menu, menu-bar-help-menu)
	(minibuffer-local-completion-map, minibuffer-local-map):
	Fix list quoting.

2009-09-17  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-form): Always check the function